set minified jquery plugin dependency

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="bower_components/daterangepicker-compare/css/daterangepicker.css" />
+    <link rel="stylesheet" href="bower_components/daterangepicker-compare/dist/daterangepicker-compare.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -49,9 +49,7 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/moment/moment.js"></script>
-<script src="bower_components/daterangepicker-compare/js/utils.js"></script>
-<script src="bower_components/daterangepicker-compare/js/calendar.js"></script>
-<script src="bower_components/daterangepicker-compare/js/daterangepicker.js"></script>
+<script src="bower_components/daterangepicker-compare/dist/daterangepicker-compare.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
