--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,27 @@
 
 <!-- Add your site or application content here -->
 <div class="container">
-    <div class="header">
+    <div id="header" class="header">
         <h3 class="text-muted">ngDaterangepickerCompare</h3>
     </div>
-
-    <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
-
-    <div class="footer">
+    <div id="content">
+        <div class="row">
+            <div class="col-lg-12">
+                <drp-compare class="pull-right" ng-model="input.dateRange" format="DD/MM/YYYY" compare="true"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <pre>{{input.dateRange | json }}</pre>
+                <input type="checkbox" ng-model="input.dateRange.compare">Compare</input>
+            </div>
+            <div class="col-lg-4">
+                <input type="text" size="50" ng-model="input.dateRange.startDate"/>
+                {{input.dateRange.startDate}}
+            </div>
+        </div>
+    </div>
+    <div id="footer" class="footer">
         <p>Chihab Otmani</p>
     </div>
 </div>
@@ -78,15 +92,5 @@
 
 </script>
 <!-- endbuild -->
-<div>
-    <drp-compare class="pull-right" ng-model="input.dateRange" format="DD/MM/YYYY" compare="true"/>
-</div>
-<pre>{{input.dateRange | json }}</pre>
-<input type="checkbox" ng-model="input.dateRange.compare">Compare</input>
-
-<div>
-    <input type="text" size="50" ng-model="input.dateRange.startDate"/>
-    {{input.dateRange.startDate}}
-</div>
 </body>
 </html>
